# envg

./: .editorconfig  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  tox.ini
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/envg/: __init__.py  env.py  main.py
