[project]
name = "envg"
description = "Environment as globals"
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer[all] >= 0.9, <1"
]

[project.optional-dependencies]
dev = [
    "pproj",
]

[build-system]
requires = [
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
#build-backend = "pproj.backend"
#backend-path = ["."]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
