[project]
name = "envg"
description = "Environment as globals"
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pproj[all]",
]

[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/j5pu/envg"
[build-system]
requires = [
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
