[project]

dependencies = [
    "nodeps"
]
name = "envg"
description = "Environment varriables as globals"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
[project.optional-dependencies]
dev = [
    "nodeps[full]",
]

[[project.authors]]
name = "José Antonio Puértolas Montañés"
email = "63794670+j5pu@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/j5pu/envg"

[project.license]
text = "MIT"
[build-system]
requires = [
    "nodeps"
    "setuptools >= 68.2.2, <69",
    "setuptools_scm >= 8.0.3, <9",
    "wheel >= 0.41.2, <1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
