[global]
quiet = 1
verbose = 0
show_warnings = false

[egg_info]
egg_base = /tmp

[options]
cmdclass =
  build_py = ppip.PTHBuildPy
  develop = ppip.PTHDevelop
  easy_install = ppip.PTHEasyInstall
  install_lib = ppip.PTHInstallLib
include_package_data = True
packages = find:
package_dir =
  = src

[options.packages.find]
where = src

[options.package_data]
ppip =
  *.pth
ppip.config =
  *
ppip.data =
  *
